insights: pin /summary fan-out + distinguish "no budgets" from "no ctx budgets"
Two related fixes:

1) Architecture pin. SummaryRepoFanOutTest drives the InsightsContextFactory
   once and then runs all three context-aware forecasters against the
   resulting snapshot. It asserts each repo is hit at most once. If anyone
   regresses a forecaster to userId-based fetching, this test fails the
   build before /summary's per-request DDB cost can balloon back to N
   per-detector calls.

2) Subtle bug the test uncovered: InsightsContext.budgets() returned an
   unmodifiable empty list when the legacy 6-arg constructor was used,
   which the BudgetExhaustionForecastService treated as "user has no
   budgets, skip" — but it was actually "test didn't pass budgets,
   fall back to repo". Added a budgetsAvailable() flag so the forecaster
   distinguishes them: true (authoritative empty) → no refetch;
   false (legacy ctor) → refetch via repo. The factory always uses the
   7-arg ctor so production behaviour is unchanged.

Updated ForecastContextOverloadTest accordingly: split the "empty
budgets" scenario into two named cases — one asserting fallback fires
under the legacy ctor, one asserting NO refetch under the factory's
authoritative-empty path.

263/263 backend unit tests pass.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>